# JsonParser2

./: CMakeLists.txt  README.md  TODO.txt
Sources/: Exposable.hpp  JsonParser.cpp  JsonParser.hpp  JsonParserUtils.hpp
Tests/: AdvancedTests.cpp  AdvancedTests.hpp  BasicTests.cpp  BasicTests.hpp  BasicTestsStructs.hpp  TestsUtils.hpp
Tests/BasicTestsJsons/: Couple.json  ListOfCouples.json  ListOfPersons.json  Struct.json  Switcher.json
Tests/Jsons/: Arithmetic.json  BirthDateRegistrar.json  Facebook.json  ListOfPersons.json  ListOfStrings.json  Painting.json  Warrior.json
